--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.0.2",
     "next-connect": "^1.0.0",
-    "openai": "^4.19.0",
+    "openai": "^4.45.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,9 +44,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/jest": "^29.5.8",
+    "@types/react": "^18.2.45",
     "dotenv": "^16.3.1",
     "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "@types/react": "^18.2.45"
+    "prettier-plugin-tailwindcss": "^0.5.7"
   }
 }
